Fix issues and Implement new functionality

--- a/www/index.html
+++ b/www/index.html
@@ -54,8 +54,9 @@
     <script src="lib/swiper/dist/js/swiper.js"></script>
     <script src="lib/angular-swiper/dist/angular-swiper.js"></script>
     <script src="lib/angular-sanitize/angular-sanitize.js"></script>
-    <script src="lib/ionic-incrementer/src/incrementer.js"></script>
+    
     <script src="lib/ionic-incrementer/src/time-incrementer.js"></script>
+    <script src="lib/ionic-incrementer/src/time-incrementer-exposure.js"></script>
     <script src="lib/moment/moment.js"></script>
     <script src="lib/humanize-duration/humanize-duration.js"></script>
     <script src="lib/angular-timer/dist/angular-timer.js"></script>
@@ -103,7 +104,12 @@
     <script src="js/controllers/main.ctrl.js"></script>
     <script src="js/controllers/photo.ctrl.js"></script>
     <script src="js/controllers/video.ctrl.js"></script>
+
+    
     <script src="js/controllers/timelapse.ctrl.js"></script>
+    <script src="lib/ionic-incrementer/src/incrementer.js"></script>
+    <script src="lib/ionic-incrementer/src/timelapse-incrementer.js"></script>
+
     <script src="js/controllers/bulb.ctrl.js"></script>
     <script src="js/controllers/photobooth.ctrl.js"></script>
     <script src="js/controllers/settings.ctrl.js"></script>
@@ -117,6 +123,9 @@
     <script src="js/controllers/savePreset.ctrl.js"></script>
     <script src="js/controllers/loadPreset.ctrl.js"></script>
     <script src="js/controllers/exposure.ctrl.js"></script>
+    <script src="js/controllers/bulbRamping.ctrl.js"></script>
+    <script src="js/controllers/isoRamping.ctrl.js"></script>
+    <script src="js/controllers/speedRamping.ctrl.js"></script>
     <script src="js/controllers/welcome.ctrl.js"></script>
     <script src="js/controllers/updatefirmware.ctrl.js"></script>
     <script src="js/directives/gonative.directive.js"></script>
